--- a/feeka-web/src/styles/_specific.scss
+++ b/feeka-web/src/styles/_specific.scss
@@ -1,8 +1,10 @@
 #banner {
     height: 100vh;
+
     h1 {
         font-size: 3em;
     }
+
     p {
         color: $secondary-color;
         padding-right: 8em;
@@ -15,9 +17,11 @@
         padding: 0 7.8em;
         text-align: center;
     }
+
     #about-cards {
         margin: 6em 0 8em 0;
         position: relative;
+
         .card {
             padding: 1.5em;
             border-radius: 25px 25px;
@@ -26,49 +30,58 @@
             margin: auto;
             box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
             border: none;
+            transition: all ease-out 0.3s;
+
             img {
                 height: 10em;
             }
+
             .card-title {
                 font-size: 1.4em;
             }
+
             .card-body {
                 padding-top: 2.5em;
             }
+
+            &:hover {
+                transform: scale(1.03);
+            }
         }
     }
+
     #about-cards:before {
-      content: "";
-      display: inline-block;
-      width: 100vw;
-      height: 50vw;
-      background-repeat: no-repeat;
-      background-size: cover;
-      position: absolute;
-      margin: auto;
-      background-image: url("assets/svgRoxoDesktop.svg");
-      top: 0;
-      bottom: 0;
-      left: calc((1140px - 100vw)/2 - 15px);
+        content: "";
+        display: inline-block;
+        width: 100vw;
+        height: 50vw;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: absolute;
+        margin: auto;
+        background-image: url("assets/svgRoxoDesktop.svg");
+        top: 0;
+        bottom: 0;
+        left: calc((1140px - 100vw)/2 - 15px);
 
-      @media (max-width: 1200px) {
-          left: calc((960px - 100vw)/2 - 15px);
-      }
+        @media (max-width: 1200px) {
+            left: calc((960px - 100vw)/2 - 15px);
+        }
 
-      @media (max-width: 992px) {
-          left: calc((720px - 100vw)/2 - 15px);
-          background-image: url("assets/svgRoxoMobile.svg");
-          height: 1500px;
-      }
+        @media (max-width: 992px) {
+            left: calc((720px - 100vw)/2 - 15px);
+            background-image: url("assets/svgRoxoMobile.svg");
+            height: 1500px;
+        }
 
-      @media (max-width: 768px) {
-          left: calc((540px - 100vw)/2 - 15px);
-      }
-        
-      @media (max-width: 576px) {
-          left: -15px;
-      }
-  }
+        @media (max-width: 768px) {
+            left: calc((540px - 100vw)/2 - 15px);
+        }
+
+        @media (max-width: 576px) {
+            left: -15px;
+        }
+    }
 }
 
 #projects {
@@ -77,10 +90,10 @@
         position: relative;
         min-height: 500px;
 
-        > div {
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
+        >div {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
 
         @media (max-width: 992px) {
@@ -89,10 +102,12 @@
             }
         }
     }
+
     button {
         margin-top: 2em;
         width: fit-content;
     }
+
     .row:before {
         content: "";
         display: inline-block;
@@ -105,6 +120,7 @@
         top: 0;
         bottom: 0;
     }
+
     .row:nth-child(even):before {
         right: 50%;
 
@@ -116,21 +132,22 @@
         @media (max-width: 768px) {
             left: calc((540px - 100vw)/2 - 15px);
         }
-          
+
         @media (max-width: 576px) {
             left: -15px;
             width: 70vw;
             bottom: auto;
         }
     }
+
     .row:nth-child(odd):before {
         left: 50%;
         background-position: right;
 
         @media (max-width: 992px) {
-          right: calc((720px - 100vw)/2 - 15px);
-          left: auto;
-          background-position: right top;
+            right: calc((720px - 100vw)/2 - 15px);
+            left: auto;
+            background-position: right top;
         }
 
         @media (max-width: 768px) {
@@ -144,6 +161,7 @@
             top: -100px;
         }
     }
+
     .row:nth-child(2):before {
         background-image: url("assets/svgLaranjaDesktop.svg");
         max-height: 600px;
@@ -152,18 +170,21 @@
             top: -30px;
         }
     }
+
     .row:nth-child(3):before {
         background-image: url("assets/svgVerdeDesktop.svg");
         max-height: 800px;
     }
+
     .row:nth-child(4):before {
         background-image: url("assets/svgAzulDesktop.svg");
         max-height: 800px;
 
         @media (max-width: 576px) {
-          top: -150px;
+            top: -150px;
         }
     }
+
     .row:nth-child(5):before {
         background-image: url("assets/svgRosaDesktop.svg");
         max-height: 800px;
@@ -174,24 +195,29 @@
     #banner {
         padding-top: 10em;
         height: auto;
+
         p {
             padding: 0 0 2em 0;
         }
     }
+
     #about {
         .description {
             padding: 0;
         }
+
         div[class^='col-']:not(:first-child) {
             margin-top: 4em;
         }
     }
+
     #projects {
         div[class='row']:nth-child(2n+1) {
             div[class^='col-']:first-child {
                 margin-top: 4em;
             }
         }
+
         div[class^='row']:nth-child(2n+2) {
             div[class^='col-']:not(:first-child) {
                 margin-top: 4em;
