--- a/default.hbs
+++ b/default.hbs
@@ -44,7 +44,7 @@
                     </div>
                     <div class="d-flex align-items-center">
                         <i class="fas fa-envelope"></i>
-                        <p>contacto@feeka.com</p>
+                        <p>wearefeeka@gmail.com</p>
                     </div>
                 </div>
             </div>
