--- a/index.hbs
+++ b/index.hbs
@@ -14,7 +14,7 @@ into the {body} of the default.hbs template --}}
                     solutions for innovative projects.</p>
             </div>
             <div class="col-lg-6 col-md-12 order-lg-2 order-1">
-                <img class="img-fluid" src="{{asset "assets/ilustracaoHero.png"}}" alt="ilustração hero">
+                <img class="img-fluid" src="{{asset "assets/ilustracaoHero.png"}}" alt="hero illustration">
             </div>
         </div>
     </div>
@@ -68,8 +68,6 @@ into the {body} of the default.hbs template --}}
             </div>
         </div>
     </div>
-
-    <!-- SOFIA IS HERE -->
 
     <div id="projects" class="section">
         <a id="Projects"></a>
