--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -12,19 +12,19 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="{{@site.url}}/#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#About">About Us</a>
+                    <a class="nav-link" href="{{@site.url}}/#About">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Team</a>
+                    <a class="nav-link disabled" href="{{@site.url}}/#">Team</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#Projects">Projects</a>
+                    <a class="nav-link" href="{{@site.url}}/#Projects">Projects</a>
                 </li>
                 <li class="nav-item contact">
-                    <a class="nav-link" href="#Contact">Contact</a>
+                    <a class="nav-link" href="{{@site.url}}/#Contact">Contact</a>
                 </li>
             </ul>
         </div>
