--- a/default.hbs
+++ b/default.hbs
@@ -47,6 +47,14 @@
                         <p>wearefeeka@gmail.com</p>
                     </div>
                 </div>
+                {{!-- <div class="social-links"> TODO: ADD SOCIAL MEDIA LINKS like below
+                    {{#if @site.facebook}}
+                        <a class="social-link social-link-fb" href="{{facebook_url @site.facebook}}" title="Facebook" target="_blank" rel="noopener">{{> "icons/facebook"}}</a>
+                    {{/if}}
+                    {{#if @site.twitter}}
+                        <a class="social-link social-link-tw" href="{{twitter_url @site.twitter}}" title="Twitter" target="_blank" rel="noopener">{{> "icons/twitter"}}</a>
+                    {{/if}}
+                </div> --}}
             </div>
         </div>
 
