--- a/assets/sass/_global.scss
+++ b/assets/sass/_global.scss
@@ -9,7 +9,7 @@ h4,
 h5,
 h6 {
     font-family: $comfortaa !important;
-    color: $primary-color;
+    color: $primary-color !important;
 }
 
 body,
