--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -1,6 +1,6 @@
 <header>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="{{@site.url}}">
             <img src="{{asset "assets/LogoHeader.png"}}" alt="feeka-logo">
         </a>
 
