--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -10,7 +10,7 @@
     --red: #f05230;
     --darkgrey: #15171A;
     --midgrey: #738a94;
-    --lightgrey: #c5d2d9;
+    --lightgrey: #fff;
     --whitegrey: #e5eff5;
     --pink: #fa3a57;
     --brown: #a3821a;
