--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -18,10 +18,10 @@
                     <a class="nav-link" href="{{@site.url}}/#About">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="{{@site.url}}/#">Team</a>
+                    <a class="nav-link" href="{{@site.url}}/#Projects">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{@site.url}}/#Projects">Projects</a>
+                    <a class="nav-link" href="{{@site.url}}/blog">Blog</a>
                 </li>
                 <li class="nav-item contact">
                     <a class="nav-link" href="{{@site.url}}/#Contact">Contact</a>
