--- a/partials/post-card.hbs
+++ b/partials/post-card.hbs
@@ -28,35 +28,14 @@
             </header>
 
             <section class="post-card-excerpt">
-                <p>{{excerpt words="33"}}</p>
+                <p>{{excerpt words="50"}}</p>
             </section>
 
+            <span class="post-card-author">Published by <strong>{{primary_author.name}}</strong> on {{date format="DD/MM/YYYY"}}</span>
+
+            <a class="post-card-button" href="{{url}}">Read more...</a>
+
         </a>
-
-        <footer class="post-card-meta">
-
-            <ul class="author-list">
-            {{#foreach authors}}
-                <li class="author-list-item">
-
-                    <div class="author-name-tooltip">
-                        {{name}}
-                    </div>
-
-                    {{#if profile_image}}
-                        <a href="{{url}}" class="static-avatar">
-                            <img class="author-profile-image" src="{{img_url profile_image size="xs"}}" alt="{{name}}" />
-                        </a>
-                    {{else}}
-                        <a href="{{url}}" class="static-avatar author-profile-image">{{> "icons/avatar"}}</a>
-                    {{/if}}
-                </li>
-            {{/foreach}}
-            </ul>
-
-            <span class="reading-time">{{reading_time}}</span>
-
-        </footer>
 
     </div>{{!--/.post-card-content--}}
 
