--- a/partials/byline-single.hbs
+++ b/partials/byline-single.hbs
@@ -8,16 +8,14 @@
         <span class="avatar-wrapper">{{> "icons/avatar"}}</span>
     {{/if}}
     <section class="author-card-content">
-        <h4 class="author-card-name"><a href="{{url}}">{{name}}</a></h4>
+        <h4 class="author-card-name"><a>{{name}}</a></h4>
         {{#if bio}}
             <p>{{bio}}</p>
-        {{else}}
-            <p>Read <a href="{{url}}">more posts</a> by this author.</p>
         {{/if}}
     </section>
 </section>
 <div class="post-full-footer-right">
-    <a class="author-card-button" href="{{url}}">Read More</a>
+    <a class="author-card-button" href="{{@site.url}}/blog">Read More</a>
 </div>
 
 {{/primary_author}}
