--- a/tag.hbs
+++ b/tag.hbs
@@ -1,30 +1,26 @@
 {{!< default}}
-{{!-- The tag above means - insert everything in this file into the {body} of the default.hbs template --}}
 
-{{#tag}}
-{{> header background=feature_image}} {{!--Special header.hbs partial to generate the <header> tag--}}
+{{> "header"}}
+
+<main id="site-main" class="site-main outer">
     <div class="inner">
-        {{> "site-nav"}}
         <div class="site-header-content">
-            <h1 class="site-title">{{name}}</h1>
+            <h1 class="site-title">What are we doing?</h1>
+            {{#tag}}
             <h2 class="site-description">
-                {{#if description}}
-                    {{description}}
+                {{#if name}}
+                    {{name}}
                 {{else}}
                     A collection of {{plural ../pagination.total empty='posts' singular='% post' plural='% posts'}}
                 {{/if}}
             </h2>
+            {{/tag}}
         </div>
     </div>
-</header>
-{{/tag}}
 
-{{!-- The main content area --}}
-<main id="site-main" class="site-main outer">
     <div class="inner">
-        <div class="post-feed">
+        <div class="post-feed-tag">
             {{#foreach posts}}
-                {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
                 {{> "post-card"}}
             {{/foreach}}
         </div>
