--- a/assets/sass/_ghost.scss
+++ b/assets/sass/_ghost.scss
@@ -593,9 +593,6 @@ make sure this only happens on large viewports / desktop-ish devices.
     .post-feed {
         padding-top: 5vw;
     }
-    .post-card {
-        margin: 0 20px 5vw;
-    }
 }
 
 
@@ -932,7 +929,7 @@ Usage (In Ghost editor):
 
 .post-full-content h1 {
     margin: 0.5em 0 0.2em 0;
-    font-size: 4.6rem;
+    font-size: 3.6rem;
     font-weight: 700;
 }
 @media (max-width: 500px) {
@@ -943,7 +940,7 @@ Usage (In Ghost editor):
 
 .post-full-content h2 {
     margin: 0.5em 0 0.2em 0;
-    font-size: 3.6rem;
+    font-size: 3rem;
     font-weight: 700;
 }
 @media (max-width: 500px) {
@@ -954,23 +951,23 @@ Usage (In Ghost editor):
 
 .post-full-content h3 {
     margin: 0.5em 0 0.2em 0;
-    font-size: 2.8rem;
+    font-size: 2.6rem;
     font-weight: 700;
 }
 @media (max-width: 500px) {
     .post-full-content h3 {
-        font-size: 2.2rem;
+        font-size: 2rem;
     }
 }
 
 .post-full-content h4 {
     margin: 0.5em 0 0.2em 0;
-    font-size: 2.8rem;
+    font-size: 1.8em;
     font-weight: 700;
 }
 @media (max-width: 500px) {
     .post-full-content h4 {
-        font-size: 2.2rem;
+        font-size: 1.8rem;
     }
 }
 
@@ -1111,7 +1108,7 @@ Usage (In Ghost editor):
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
-    padding: 3vw 0 6vw 0;
+    padding: 3vw 0;
     max-width: 840px;
 }
 
@@ -1130,9 +1127,9 @@ Usage (In Ghost editor):
 }
 
 .author-card-name {
-    margin: 8px 0 2px 0;
-    padding: 0;
-    font-size: 2rem;
+    padding: 0 0 0 9px;
+    margin: 0;
+    font-size: 1.8rem;
 }
 
 .author-card-name a {
@@ -1142,6 +1139,12 @@ Usage (In Ghost editor):
 
 .author-card-name a:hover {
     text-decoration: none;
+}
+
+.author-card-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .author-card-content p {
