--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -15,7 +15,7 @@
                     <a class="nav-link" href="{{@site.url}}/#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{@site.url}}/#About">About Us</a>
+                    <a class="nav-link" href="{{@site.url}}/about">About Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{@site.url}}/#Projects">Projects</a>
