--- a/about.hbs
+++ b/about.hbs
@@ -42,7 +42,7 @@ into the {body} of the default.hbs template --}}
                         <div class="col-lg-4 col-md-6 col-6">
                             <img src="{{asset "assets/about/business/MafaldaGomes.png"}}" alt="mafalda-gomes">
                             <h6>Mafalda Gomes</h6>
-                            <p>CTO</p>
+                            <p>CBO</p>
                         </div>
                         <div class="col-lg-4 col-md-6 col-6">
                             <img src="{{asset "assets/about/business/AntonioSilva.png"}}" alt="antonio-silva">
