--- a/about.hbs
+++ b/about.hbs
@@ -5,10 +5,10 @@ into the {body} of the default.hbs template --}}
 {{!-- The big featured header, it uses blog cover image as a BG if available --}}
 {{> "header"}}
 
-<div id="banner-about-us" class="d-flex align-items-center">
+<div id="banner-about-us">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-12 col-md-12">
+            <div class="col-lg-12 col-md-12 d-flex justify-content-center">
                 <img class="img-fluid" src="{{asset "assets/about/feekaMain.png"}}" alt="company photo">
             </div>
         </div>
