--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="{{@site.url}}/blog">Blog</a>
                 </li>
                 <li class="nav-item contact">
-                    <a class="nav-link" href="{{@site.url}}/#Contact">Contact</a>
+                    <a class="nav-link" href="mailto:wearefeeka@gmail.com">Contact</a>
                 </li>
             </ul>
         </div>
