social media links

--- a/assets/sass/_specific.scss
+++ b/assets/sass/_specific.scss
@@ -228,22 +228,34 @@
 
 div.site-header-content {
     padding: 2em 0 8em 0;
+
     @media (max-width: 992px) {
         padding: 0em;
     }
 
-    h1.site-title{
+    h1.site-title {
         text-align: center !important;
 
         @media (max-width: 992px) {
-            font-size: 2rem!important;
+            font-size: 2rem !important;
         }
     }
 }
 
 ul.author-list span h2.post-author {
     margin-left: 0.6em;
+
     @media (max-width: 576px) {
         display: none;
+    }
+}
+
+.footer-contact {
+    h6 {
+        margin-bottom: 0;
+    }
+
+    div.d-flex.align-items-center a:first-child {
+        padding-left: 0;
     }
 }
