--- a/default.hbs
+++ b/default.hbs
@@ -38,6 +38,10 @@
 
                 <div class="footer-contact text-wrap">
                     <h6>Contact</h6>
+                    <div class="d-flex align-items-center">
+                        <a class="social-link social-link-fb" href="https://facebook.com/wearefeeka" title="Facebook" target="_blank" rel="noopener">{{> "icons/facebook"}}</a>
+                        <a class="social-link social-link-ig" href="https://instagram.com/wearefeeka" title="Instagram" target="_blank" rel="noopener">{{> "icons/instagram"}}</a>
+                    </div>
                     <div class="d-flex align-items-center mb-2">
                         <i class="fas fa-map-marker-alt"></i>
                         <p>R. Dr. Roberto Frias, 4200-465 <br> Porto, Portugal</p>
@@ -47,14 +51,6 @@
                         <p>wearefeeka@gmail.com</p>
                     </div>
                 </div>
-                {{!-- <div class="social-links"> TODO: ADD SOCIAL MEDIA LINKS like below
-                    {{#if @site.facebook}}
-                        <a class="social-link social-link-fb" href="{{facebook_url @site.facebook}}" title="Facebook" target="_blank" rel="noopener">{{> "icons/facebook"}}</a>
-                    {{/if}}
-                    {{#if @site.twitter}}
-                        <a class="social-link social-link-tw" href="{{twitter_url @site.twitter}}" title="Twitter" target="_blank" rel="noopener">{{> "icons/twitter"}}</a>
-                    {{/if}}
-                </div> --}}
             </div>
         </div>
 
