--- a/default.hbs
+++ b/default.hbs
@@ -38,18 +38,28 @@
 
                 <div class="footer-contact text-wrap">
                     <h6>Contact</h6>
-                    <div class="d-flex align-items-center">
-                        <a class="social-link social-link-fb" href="https://facebook.com/wearefeeka" title="Facebook" target="_blank" rel="noopener">{{> "icons/facebook"}}</a>
-                        <a class="social-link social-link-ig" href="https://instagram.com/wearefeeka" title="Instagram" target="_blank" rel="noopener">{{> "icons/instagram"}}</a>
-                    </div>
                     <div class="d-flex align-items-center mb-2">
                         <i class="fas fa-map-marker-alt"></i>
                         <p>R. Dr. Roberto Frias, 4200-465 <br> Porto, Portugal</p>
                     </div>
-                    <div class="d-flex align-items-center">
-                        <i class="fas fa-envelope"></i>
-                        <p>wearefeeka@gmail.com</p>
-                    </div>
+                    <a href="mailto:wearefeeka@gmail.com">
+                        <div class="d-flex align-items-center mb-2">
+                            <i class="fas fa-envelope"></i>
+                            <p>wearefeeka@gmail.com</p>
+                        </div>
+                    </a>
+                    <a href="https://facebook.com/wearefeeka">
+                        <div class="d-flex align-items-center mb-2">
+                            <i class="fab fa-facebook"></i>
+                            <p>@wearefeeka</p>
+                        </div>
+                    </a>
+                    <a href="https://instagram.com/wearefeeka">
+                        <div class="d-flex align-items-center">
+                            <i class="fab fa-instagram"></i>
+                            <p>@wearefeeka</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
